@@ -1,12 +1,7 @@
 {
   "count": 4,
-  "uniques": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-06-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-07T00:00:00Z",
       "count": 1,
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2025-06-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
